--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -582,3 +582,47 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   year={2018},
   publisher={Elsevier}
 }
+
+@article{zadeh1978fuzzy,
+  title={Fuzzy sets as a basis for a theory of possibility},
+  author={Zadeh, Lotfi Asker},
+  journal={Fuzzy sets and systems},
+  volume={1},
+  number={1},
+  pages={3--28},
+  year={1978},
+  publisher={Elsevier}
+}
+
+@article{liu2008efficient,
+  title={An efficient centroid type-reduction strategy for general type-2 fuzzy logic system},
+  author={Liu, Feilong},
+  journal={Information Sciences},
+  volume={178},
+  number={9},
+  pages={2224--2236},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{roerdink2000watershed,
+  title={The watershed transform: Definitions, algorithms and parallelization strategies},
+  author={Roerdink, Jos BTM and Meijster, Arnold},
+  journal={Fundamenta informaticae},
+  volume={41},
+  number={1, 2},
+  pages={187--228},
+  year={2000},
+  publisher={IOS press}
+}
+
+@article{hwang2007uncertain,
+  title={Uncertain fuzzy clustering: Interval type-2 fuzzy approach to $ c $-means},
+  author={Hwang, Cheul and Rhee, Frank Chung-Hoon},
+  journal={IEEE Transactions on Fuzzy Systems},
+  volume={15},
+  number={1},
+  pages={107--120},
+  year={2007},
+  publisher={IEEE}
+}
