--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 
 % 所有其它可能用到的包都统一放在这里，可以根据实际需要添加或者删除。
 \usepackage{bnutils}
+\usepackage{amsmath,bm}
 \usepackage{mathtools}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 % 你可以在这里修改配置文件中的定义，导言区可以使用中文。
