--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -626,3 +626,35 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   year={2007},
   publisher={IEEE}
 }
+
+@article{zhang2011progress,
+  title={Progress on studies of land use/land cover classification systems},
+  author={Zhang, Jing-hua and Feng, Zhiming and Jiang, Lu-guang},
+  journal={Resources Science},
+  volume={33},
+  number={6},
+  pages={1195--1203},
+  year={2011}
+}
+
+@article{karnik2001centroid,
+  title={Centroid of a type-2 fuzzy set},
+  author={Karnik, Nilesh N and Mendel, Jerry M},
+  journal={Information Sciences},
+  volume={132},
+  number={1-4},
+  pages={195--220},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{wu2009enhanced,
+  title={Enhanced karnik--mendel algorithms},
+  author={Wu, Dongrui and Mendel, Jerry M},
+  journal={IEEE Transactions on Fuzzy Systems},
+  volume={17},
+  number={4},
+  pages={923--934},
+  year={2009},
+  publisher={IEEE}
+}
